--- a/logout.html
+++ b/logout.html
@@ -28,9 +28,9 @@
             }),
             contentType: 'application/json',
             dataType: 'json',
-            /*xhrFields: {
+            xhrFields: {
                withCredentials: true
-            }, */
+            },
             crossDomain: true
           })
           .then(res => {
